# UFC-Fight-Predictor

./: .gitignore  LEARNING_NOTES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: methodology.md
outputs/: baseline_coefficients.csv  baseline_metrics.csv  calibration_buckets.csv  confidence_buckets.csv  model_report.md  sklearn_model_comparison.csv
src/: compare_models.py  feature_engineering.py  generate_charts.py  predict_matchup.py  train_baseline.py
src/ufc_predictor/: __init__.py  artifacts.py  charts.py  config.py  data.py  domain.py  evaluation.py  features.py  model.py  model_comparison.py  prediction.py  preprocessing.py  reporting.py  training.py
tests/: test_artifacts.py  test_feature_engineering.py  test_predict_matchup.py  test_train_baseline.py
