[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-fight-predictor"
version = "0.1.0"
description = "Leakage-safe UFC fight outcome prediction with chronological feature engineering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
